ingress/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /appv1
        pathType: Prefix
        backend:
          service:
            name: app-v1
            port:
              number: 8080
      - path: /appv2
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 9090
